<resources>
    <string name="app_name">Discover</string>
    <string name="my_favorites">My Favorites</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="login_title">LOGIN</string>
    <string name="login_lable1">Account</string>
    <string name="login_lable2">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_title">CREATE ACCOUNT</string>
    <string name="register_email">Email</string>
    <string name="register_btn">Register</string>

    <string name="need_help">Help</string>
    <string name="sign_up">CREATE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="timkiem">Search</string>
    <string name="name">Name</string>
    <string name="baihatmoi">New songs</string>
    <string name="baihatyeuthich">Favorite songs</string>
    <string name="xemtatca">See all ></string>
    <string name="nhacviet">Vietnamese songs</string>
    <string name="nhacaumy">US - UK Songs</string>
    <string name="nhachan">Bolero</string>
    <string name="banner">Banner</string>
    <string name="malegender">Male</string>
    <string name="femalegender">Female</string>
    <string name="register">Register</string>
</resources>
